<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:padding="16dp">


=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0
    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="48dp"
<<<<<<< HEAD
        android:autofillHints="address"
        android:hint="@string/location_hint"
        android:inputType="text"
        android:maxWidth="488dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
=======
        android:maxWidth="488dp"
        android:hint="@string/location_hint"
        android:inputType="text"
        android:autofillHints="address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0
        app:layout_constraintWidth_max="488dp" />

    <EditText
        android:id="@+id/etTreeType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:maxWidth="488dp"
        android:hint="@string/tree_type_hint"
        android:inputType="text"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/etLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="488dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:maxWidth="488dp"
        android:hint="@string/quantity_hint"
        android:inputType="number"
        android:autofillHints="quantity"
        app:layout_constraintTop_toBottomOf="@id/etTreeType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="488dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:maxWidth="488dp"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:autofillHints="date"
        app:layout_constraintTop_toBottomOf="@id/etQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="488dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        app:layout_constraintTop_toBottomOf="@id/etDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

<<<<<<< HEAD
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

=======
>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0
</androidx.constraintlayout.widget.ConstraintLayout>