<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
<<<<<<< HEAD
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
=======
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
<<<<<<< HEAD
=======

>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0
    <LinearLayout
        android:id="@+id/statisticsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTotalTrees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_trees"
            style="@style/StatisticTextStyle"
            android:background="@drawable/statistic_background"
            android:padding="16dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvTotalCO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_co2"
            style="@style/StatisticTextStyle"
            android:background="@drawable/statistic_background"
            android:padding="16dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvProgress"
            style="@style/StatisticTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/statistic_background"
            android:padding="16dp"
            android:text="@string/general_progress" />
<<<<<<< HEAD
=======

>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/back_button"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />
=======
        android:layout_marginTop="24dp"
        android:text="@string/back_button"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/statisticsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
>>>>>>> 7cea1a74fa8cb21d325a1cbfa043365e9b605cd0

</androidx.constraintlayout.widget.ConstraintLayout>